force-app/main/default/objects/SuRF_Partner_Performance_Scorecard_Trans__c/fields/Competency_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Competency_Signed_Date__c</fullName>
    <label>Competency Signed Date</label>
    <type>Date</type>
</CustomField>