force-app/main/default/objects/SuRF_Partner_Performance_Scorecard_Trans__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SuRF_Level</valueSetName>
    </valueSet>
</CustomField>