force-app/main/default/objects/SuRF_Partner_Performance_Scorecard_Trans__c/fields/Partner_Program__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program__c</fullName>
    <label>Partner Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SuRF_Partner_Program</valueSetName>
    </valueSet>
</CustomField>