force-app/main/default/objects/SuRF_Partner_Performance_Scorecard_Trans__c/fields/Partner_SubProgram__c.field-meta.xml
<CustomField>
    <fullName>Partner_SubProgram__c</fullName>
    <label>Partner SubProgram</label>
    <length>255</length>
    <type>Text</type>
</CustomField>